# open-opal

./: .gitignore  README.md  project.yml
.github/workflows/: release.yml
Assets/: AppIcon.icns
Sources/OpalBridge/: CMakeLists.txt  OpalBridge.cpp
Sources/OpalBridge/include/: OpalBridge.h
Sources/OpalBridge/test/: bridge_test.c  region_test.c
Sources/OpenOpal/: CameraModel.swift  Info.plist  OpenOpal-Bridging-Header.h  OpenOpal.entitlements  OpenOpalApp.swift
Sources/OpenOpal/Camera/: CameraSettings.swift  OpalDevice.swift
Sources/OpenOpal/Render/: Bokeh.metal  BokehRenderer.swift  DepthProvider.swift  MatteProvider.swift
Sources/OpenOpal/UI/: ContentView.swift  Inspector.swift  MetalPreview.swift
Sources/OpenOpal/VirtualCamera/: ExtensionInstaller.swift  VirtualCameraFeeder.swift
Sources/OpenOpalCameraExtension/: CameraProvider.swift  Info.plist  OpenOpalCameraExtension.entitlements  SplashCard.swift  main.swift
docs/: RELEASING.md  SIGNING.md
scripts/: bootstrap.sh  fetch-models.sh  release.sh  sign.sh
